# manyfunpy

./: LICENSE  README.md  pyproject.toml
docs/: api_reference.md
src/manyfunpy/: __init__.py  alignment.py  gui.py  io.py  mplot.py
src/manyfunpy/data/: __init__.py  artic.py  audio.py  mnap.py  nwb2nap.py  pitch.py
src/manyfunpy/stats/: __init__.py  nmf.py
tests/: test_io.py  test_stats_nmf.py
