[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "manyfunpy"
version = "0.1.0"
description = "Utility functions for plotting and GUI helpers."
requires-python = ">=3.9"
dependencies = [
    "matplotlib",
    "numpy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
